--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23122,11 +23122,21 @@ cette violente opération...]]></target>
       <notes>
         <note category="german">Die Anwesenheit des Geistigen Beistands unter den Nachtwächtern gibt ihnen jeweils einen Boost von {counsel} Verteidigung.</note>
         <note category="from">twig:///templates/ajax/game/town/nightwatch.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Die Anwesenheit des Geistigen Beistands unter den Nachtwächtern gibt ihnen jeweils einen Boost von {counsel} Verteidigung.</source>
         <target>La présence de l'objet Discours Rassurant Multicoloré parmi les veilleurs actuels permet d'apporter un gain de {counsel} points de défense.</target>
+      </segment>
+    </unit>
+    <unit id="vhwzs0L">
+      <notes>
+        <note category="german">&lt;strong&gt;Herzlichen Glückwunsch&lt;/strong&gt;, du hast Folgendes freigeschaltet: {list}</note>
+        <note category="from">db://LogEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>&lt;strong&gt;Herzlichen Glückwunsch&lt;/strong&gt;, du hast Folgendes freigeschaltet: {list}</source>
+        <target><![CDATA[<strong>Herzlichen Glückwunsch</strong>, du hast Folgendes freigeschaltet: {list}]]></target>
       </segment>
     </unit>
   </file>
