Fixes #1597 Adds gazette viewer to admin panel

--- a/translations/game+intl-icu.de.xlf
+++ b/translations/game+intl-icu.de.xlf
@@ -9879,7 +9879,7 @@
         <target>
           {ref__icu, select,
             on {
-              {ration, plural,
+              {count, plural,
                 =1 {Verlorenes Brunnenwasser: Eine Einheit}
                 other {Verlorenes Brunnenwasser: # Einheiten}
               }
