--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3827,7 +3827,7 @@
       </notes>
       <segment>
         <source>Icons</source>
-        <target>Icons</target>
+        <target>Iconos</target>
       </segment>
     </unit>
     <unit id="PkaUwqL" name="Einzigartige Titel">
@@ -3838,7 +3838,7 @@
       </notes>
       <segment>
         <source>Einzigartige Titel</source>
-        <target>Einzigartige Titel</target>
+        <target>Título Exclusivo</target>
       </segment>
     </unit>
     <unit id="WzoxwcK" name="Einzigartige Icons">
@@ -3849,7 +3849,7 @@
       </notes>
       <segment>
         <source>Einzigartige Icons</source>
-        <target>Einzigartige Icons</target>
+        <target>Iconos Exclusivos</target>
       </segment>
     </unit>
   </file>
