ES Pumpkin correction

--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -6857,7 +6857,7 @@
       </notes>
       <segment>
         <source>Ausgeschnitzter weicher Kürbis</source>
-        <target>Calabaza suavemente tallada</target>
+        <target>Calabaza suave tallada</target>
       </segment>
     </unit>
     <unit id="hgy9Tb5">
