--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -1955,7 +1955,7 @@
       </notes>
       <segment>
         <source>Du möchtest schon seit langem &lt;strong&gt;mit deinen Freunden zusammen sterben&lt;/strong&gt;? Du möchtest die gleichen schönen und &lt;strong&gt;entsetzlichen&lt;/strong&gt; Momente mit ihnen erleben? Dann sind die &lt;strong&gt;Kleinen Koalitionen&lt;/strong&gt; genau das richtige für dich! Es handelt sich um kleine Mannschaften von &lt;strong&gt;5&lt;/strong&gt; Bürgern, die gemeinsam die Welt der Verdammten entdecken möchten.</source>
-        <target><![CDATA[Vous rêvez de <strong>mourir entre amis</strong> ? Vous souhaitez partager les mêmes moments de tendresse et d'<strong>horreur</strong> ? Alors les <strong>Petites Coalitions</strong> sont un outil idée pour vous ! Ce sont des 'équipes' de choc de <strong>5</strong> citoyens qui traversent le monde des Hordes ensemble.]]></target>
+        <target><![CDATA[Vous rêvez de <strong>mourir entre amis</strong> ? Vous souhaitez partager les mêmes moments de tendresse et d'<strong>horreur</strong> ? Alors les <strong>Petites Coalitions</strong> sont un outil idéal pour vous ! Ce sont des 'équipes' de choc de <strong>5</strong> citoyens qui traversent le monde des Hordes ensemble.]]></target>
       </segment>
     </unit>
     <unit id="_SpidlG">
