--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -3029,7 +3029,7 @@
       </notes>
       <segment>
         <source>Starker Laserpointer (Leer)</source>
-        <target>Pointeur laser brûlant (vide)</target>
+        <target>Pointeur laser brûlant déchargé</target>
       </segment>
     </unit>
     <unit id="EJTnMeh" name="Teleskop">
@@ -3790,7 +3790,7 @@
       </notes>
       <segment>
         <source>Essen suchen</source>
-        <target>Cherchez de la nourriture</target>
+        <target>Chercher de la nourriture</target>
       </segment>
     </unit>
     <unit id="TmH05e3" name="Tarnen">
